# japanese_opinion_survey

./: .gitignore  .gitmodules  Dockerfile  README.md  pyproject.toml
resources/: yorontyousa_trimmed.csv
scripts/: analyze_prompt_token_length.py
src/: distributions.py  generations.py  items.py  load_data.py  main.py  prompt_creators.py  run.py  settings.py  utils.py
src/analysis/: analyze_agreement_between_labels.py  analyze_agreement_between_labels_by_choices.py  items.py  load_data.py  main.py  utils.py  write_data.py
