[tool.poetry]
name = "japanese-opinion-survey"
version = "0.1.0"
description = ""
authors = ["masaya-ohagi <masaya.ohagi@sbintuitions.co.jp>"]

[tool.poetry.dependencies]
python = "^3.10"
jsonlines = "^4.0.0"
pandas = "^2.2.0"
numpy = "^1.26.3"
openai = "^1.12.0"
flexeval = "^0.3.1"
scipy = "^1.13.0"
requests = "^2.31.0"
nltk = "^3.8.1"
mecab-python = "^1.0.0"
ipadic = "^1.0.0"
spacy = "^3.7.4"
ruff = "^0.4.7"
google-api-python-client = "^2.133.0"
jiwer = "^3.0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
